--- a/app/composer.json
+++ b/app/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.0",
-        "ramsey/uuid": "^3.8"
+        "ramsey/uuid": "^3.8",
+        "components/flag-icon-css": "^3.4"
     }
 }
